--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>Hertl Clone</title>
   <link rel="stylesheet" href="styles.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/ace.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/3.13.1/less.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/sass.js/0.11.1/sass.sync.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
 </head>
 <body>
   <div class="container">
@@ -18,6 +21,7 @@
       <iframe id="preview"></iframe>
     </div>
   </div>
+  <button id="saveSnippet">Save Snippet</button>
   <script src="script.js"></script>
 </body>
 </html>
